<resources>
    <string name="app_name">LoginAnimation</string>
    <string name="login">LOGIN</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="btn_go">GO</string>
    <string name="forget_password">Forgot your password ?</string>
    <string name="register">REGISTER</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="next">NEXT</string>
    <string name="login_success">login success</string>
</resources>
