<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context="com.example.lwxwl.loginanimation.MainActivity">
    

    <!-- app:cardCornerRadius: 边缘弧度数;
         app:cardElevation: 高度
         app:cardUseCompatPadding="true"： 设置内边距 -->
    <android.support.v7.widget.CardView
        android:id="@+id/cv"
        android:layout_width="300dp"
        android:layout_height="300dp"
        app:cardCornerRadius="6dp"
        app:cardElevation="3dp"
        app:cardUseCompatPadding="true"
        android:layout_centerInParent="true">
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="10dp">
                <View
                    android:layout_width="8dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:background="#2fa881"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="50dp"
                    android:layout_marginLeft="50dp"
                    android:text="@string/login"
                    android:textColor="#ffcc00"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    />
            </RelativeLayout>
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:paddingStart="50dp"
                android:paddingLeft="50dp"
                android:paddingEnd="30dp"
                android:paddingRight="30dp"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="#c5c5c5">
                    <EditText
                        android:id="@+id/username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="2dp"
                        android:hint="@string/username"
                        android:textSize="13sp"
                        android:textColor="#2fa881"
                        android:background="@drawable/bg_edit"
                        android:inputType="textPersonName"
                        android:textCursorDrawable="@drawable/bg_input_cursor"
                        />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:paddingStart="50dp"
                android:paddingLeft="50dp"
                android:paddingEnd="30dp"
                android:paddingRight="30dp"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="#c5c5c5">
                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="2dp"
                        android:hint="@string/password"
                        android:textSize="13sp"
                        android:textColor="#2fa881"
                        android:background="@drawable/bg_edit"
                        android:inputType="textPassword"
                        android:textCursorDrawable="@drawable/bg_input_cursor"
                        />
                    </android.support.design.widget.TextInputLayout>
            </LinearLayout>
            
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="center"
                android:layout_marginTop="25dp">
                <Button
                    android:id="@+id/btn_go"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:text="@string/btn_go"
                    android:textColor="#d3d3d3"
                    android:background="@drawable/btn_shape"
                    android:stateListAnimator="@drawable/state_animator"
                    />
            </RelativeLayout>

            <TextView
                android:text="@string/forget_password"
                android:textColor="#9a9a9a"
                android:textSize="12sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_gravity="center_horizontal"
                />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        app:fabSize="normal"
        android:src="@drawable/ic_add_white_24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:transitionName="loginFab"
        android:layout_marginTop="25dp"
        android:layout_alignTop="@id/cv"
        android:layout_alignEnd="@id/cv"
        android:layout_alignRight="@+id/cv"
        android:layout_marginEnd="-20dp"
        android:layout_marginRight="-20dp"
        />
    
</RelativeLayout>
